--- a/app/app.css
+++ b/app/app.css
@@ -145,7 +145,7 @@ input, textarea, select {
   }
   
   /* Reduce logo size in landscape */
-  header[class*="fixed"] img[alt="Health Insurance Dave"] {
+  header[class*="fixed"] img[alt="Insurance Dave"] {
     height: 2rem !important;
     width: 2rem !important;
   }
