--- a/app/routes/discover.css
+++ b/app/routes/discover.css
@@ -1749,7 +1749,7 @@
   }
   
   /* Reduce logo size in landscape */
-  header[class*="fixed"] img[alt="Health Insurance Dave"] {
+  header[class*="fixed"] img[alt="Insurance Dave"] {
     height: 2rem !important;
     width: 2rem !important;
   }
